# Florae-Demo-with-Appium

./: .gitignore  .pylintrc  Dockerfile  README.md  config.cfg  pyproject.toml  pytest.ini
reporting/allure-results/: 08912ab3-2afd-4536-b436-5531569defc5-result.json  0bebe957-c474-4a50-92eb-efb51f93a565-result.json  4438c187-4a81-45bb-a187-123f5742c0a3-result.json  612354af-1018-46ed-889b-4e495077399e-container.json  75b6f7ff-0db0-4f53-a1b6-0777a6fc4a6e-container.json  b0607570-bdd3-4cfc-8668-7a3e51a6f6f0-container.json  b4b46980-ed85-4126-8f46-0bc6cc212ee6-result.json  ff316854-5e9e-46e9-b594-f61cdfbde2ec-container.json
reporting/allure-single-page/: index.html
src/pages/garden/: locators.py  page.py
src/pages/home/: locators.py  page.py
src/pages/plant/: locators.py  page.py
src/tests/: core.py  test_basic.py
src/utils/: action.py  device.py  exception.py  helpers.py  platform.py  wait.py
